# TSHunter

./: .gitignore  AGENTS.md  Dockerfile  MinimalAnalysisOption.java  README.md  TLShunter_cursor_instructions.md  TSHunter单仓化.md  chrome_143_target.txt  chrome_versions.txt  ghidra_analysis.sh  hkdf_verify.py  libssl.so.3_linux_x86_64.json  monitor_analysis.sh  pyproject.toml  requirements.txt  run.py  run_batch.sh  run_binary_analysis.sh  run_chrome_analysis.sh  tshunter.py
BoringSecretHunter/: BoringSecretHunter.java  Dockerfile
TLSKeyHunter/: Dockerfile  custom_log4j.xml
configs/: agent.yaml
data/: .gitignore  fingerprints.db  schema.sql  seed_fingerprints.json
docker/: Dockerfile
docs/: TLShunter_cursor_instructions.md  agent_automation.md  consumption_audit.md  fingerprint_standard.md  hkdf_identification.md  integrated_README.md  migration.md  relocation.md  unified_schema.md
ghidra_scripts/: ExtractKDFFingerprint.java  custom_log4j.xml
hooks/: chrome_hooks.js  probe_ssl_log_secret.js
integrated/: Dockerfile  README.md  ghidra_analysis.sh  run.py
learn/: P6-Phase3数据库构建规划.md  P7-plan.md  TShunter 自动化指纹提取与 Chrome 多版本数据库构建 — 现状与下一步.md  phase 4-fix.md  阶段1.md  阶段2.1.md  阶段2.md  验证.md
logs/: root-Palm-TLSHunter-results-20260502-154529-.txt
profiles/: boringssl_chrome.json
reports/: B1_report.md  failed_versions.csv  hook_coverage.csv  relocate_success.csv  verification_summary.csv
results/: 143_auto.json  ANALYSIS_DONE  chrome_143.0.7499.169_linux_x86_64.json  hooks_143.json  relocate_143.0.7499.192_from_169.json
runtime/: chrome_versions.txt  (+1 more)
(+109 files in other folders)
