[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tshunter"
version = "0.1.0"
description = "Unified TLS hook fingerprint analyzer and runtime capture toolkit"
requires-python = ">=3.10"
dependencies = [
  "pyelftools>=0.29",
  "pefile>=2023.2.7",
  "pytest>=7.0",
  "frida-tools>=12.0.0"
]

[project.scripts]
tshunter = "tshunter.cli:main"

[tool.setuptools]
packages = ["tshunter"]

